k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud-platform
  labels:
    app.kubernetes.io/part-of: cloud-platform
